# recorder-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  device_admin.bat  get-opencv.sh  install_app.bat  install_app.sh  provision-qr.py  settings.gradle
.github/workflows/: android.yml
Application/: CMakeLists.txt  build.gradle
Application/src/main/: AndroidManifest.xml
Application/src/main/cpp/: ImageEnhance.cpp  ImageEnhance.h  ImageEnhanceTest.cpp  ImageEnhance_jni.cpp  Tracker.cpp  Tracker.h  TrackerTest.cpp
Application/src/main/java/org/mdeimonitorsview/android/recorder/: App.java  AppConstants.java  AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  DataSaver.java  ImageEnhance.java  ImageManager.java  ImageTreatment.java  MainActivity.java  Ocr.java  QrScanActivity.java  ReferencesImage.java  ResolutionViewModel.java  ResponseDataSharingListener.java  SegmentsSyncer.java  UiHandler.java
Application/src/main/java/org/mdeimonitorsview/android/recorder/classes/: ApkDownloader.java  CameraData.java  GsonSerializations.java  Segment.java
Application/src/main/java/org/mdeimonitorsview/android/recorder/devowner/: DevAdminReceiver.kt  UpdateReceiver.kt  Utils.kt
Application/src/main/java/org/mdeimonitorsview/android/recorder/publishers/: BasePublisher.java  ImagePublisher.java  MonitorData.java  OcrPublisher.java
Application/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml
Application/src/main/res/layout-land/: activity_camera.xml  fragment_camera2_basic.xml
Application/src/main/res/values/: base-strings.xml  strings.xml
OpenCV-android-sdk/sdk/: build.gradle
